--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+mqtt.automaticReconnect=true
+mqtt.cleanSession=true
+mqtt.connectionTimeout=10
+mqtt.clientId=${COMPUTERNAME}-MQTT
+mqtt.hostname=127.0.0.1
+mqtt.port=1883
+mqtt.publishTopic=vacsOutput
+mqtt.subscribeTopic=vacsInput
