--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ mqtt.hostname=127.0.0.1
 mqtt.port=1883
 mqtt.publishTopic=vacsOutput
 mqtt.subscribeTopic=vacsInput
+
+server.servlet.context-path=/vacs
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
