--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ mqtt.port=1883
 mqtt.publishTopic=vacsOutput
 mqtt.subscribeTopic=vacsInput
 
+vajra.appUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/GetResidentVehcileList
+
 server.servlet.context-path=/vacs
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
