--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ mqtt.publishTopic=vacsOutput
 mqtt.subscribeTopic=vacsInput
 
 vajra.appUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/GetResidentVehcileList
+vajra.key=k89m5bae-5c40-985a-bb30-h74602e56f731
 
 server.servlet.context-path=/vacs
 
