Connect to Vajra App to push image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,9 @@ mqtt.publishTopic=vacsOutput
 mqtt.subscribeTopic=vacsInput
 
 vajra.appUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/GetResidentVehcileList
+vajra.txnUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/CreateResidentVehicleTrans
 vajra.key=k89m5bae-5c40-985a-bb30-h74602e56f731
+vajra.snapFolder=C:/
 
 server.servlet.context-path=/vacs
 
