--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 
 logging.level.org.springframework.web=ERROR
-logging.level.com.vacs=DEBUG
+logging.level.com=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.file.name=vacs-java.log
