--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ vajra.appUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/GetResidentVehcileLi
 vajra.txnUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/CreateResidentVehicleTrans
 vajra.key=k89m5bae-5c40-985a-bb30-h74602e56f731
 vajra.snapFolder=C:/
+vajra.cronExp=*/10 * * * *
 
 server.servlet.context-path=/vacs
 
