Continuos Mqtt Subscription

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,10 @@ mqtt.connectionTimeout=10
 mqtt.clientId=${COMPUTERNAME}-MQTT
 mqtt.hostname=127.0.0.1
 mqtt.port=1883
-mqtt.publishTopic=vacsOutput
-mqtt.subscribeTopic=vacsInput
+mqtt.username=
+mqtt.password=
+mqtt.publishTopic=messageFromVacs
+mqtt.subscribeTopic=messageToVacs
 
 vajra.appUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/GetResidentVehcileList
 vajra.txnUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/CreateResidentVehicleTrans
