open cloud mqtt config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ mqtt.automaticReconnect=true
 mqtt.cleanSession=true
 mqtt.connectionTimeout=10
 mqtt.clientId=${COMPUTERNAME}-MQTT
-mqtt.hostname=127.0.0.1
+mqtt.hostname=public.mqtthq.com
 mqtt.port=1883
 mqtt.username=
 mqtt.password=
