--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,18 @@ mqtt.automaticReconnect=true
 mqtt.cleanSession=true
 mqtt.connectionTimeout=10
 mqtt.clientId=${COMPUTERNAME}-MQTT
-mqtt.hostname=public.mqtthq.com
+mqtt.hostname=test.mosquitto.org
+#mqtt.hostname=public.mqtthq.com
 mqtt.port=1883
 mqtt.username=
 mqtt.password=
 mqtt.publishTopic=messageFromVacs
 mqtt.subscribeTopic=messageToVacs
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 vajra.appUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/GetResidentVehcileList
 vajra.txnUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/CreateResidentVehicleTrans
