--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,11 @@ mqtt.password=
 mqtt.publishTopic=messageFromVacs
 mqtt.subscribeTopic=messageToVacs
 
+#spring.rabbitmq.host=137.59.111.180
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=vacs
+spring.rabbitmq.password=v@cs01
 
 vajra.appUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/GetResidentVehcileList
 vajra.txnUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/CreateResidentVehicleTrans
