Update in message handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ mqtt.password=
 mqtt.publishTopic=messageFromVacs
 mqtt.subscribeTopic=messageToVacs
 
-#spring.rabbitmq.host=137.59.111.180
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=137.59.111.180
+#spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=vacs
 spring.rabbitmq.password=v@cs01
