New Vehicle Pull Event

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.rabbitmq.username=vacs
 spring.rabbitmq.password=v@cs01
 
 vajra.appUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/GetResidentVehcileList
+vajra.newVehicleUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/GetVehcileDetail?vehicleId=
 vajra.txnUrl=https://ssgroup.endpoint.vajraapp.com/api/VACS/CreateResidentVehicleTrans
 vajra.key=k89m5bae-5c40-985a-bb30-h74602e56f731
 vajra.snapFolder=C:/
