Anpr to Vacs integrated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,7 @@ logging.level.com=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.file.name=vacs-java.log
+
+anpr.ip=192.168.1.108,192.168.1.118
+anpr.user=admin
+anpr.password=admin123
